<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_compass"
        android:name="com.bijgepast.locationhunter.ui.Compass.CompassFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_compass" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bijgepast.locationhunter.ui.Home.HomeFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_hints"
        android:name="com.bijgepast.locationhunter.ui.Hints.HintsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_hints" />
</navigation>