<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/UserName"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/Password"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/UserName" />

        <Button
            android:text="@string/SignIn"
            android:id="@+id/LoginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/SignUpButton"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/Password"/>

        <Button
            android:id="@+id/SignUpButton"
            android:text="@string/SignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/LoginButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/Password"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>