<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="com.bijgepast.locationhunter.R" />

        <variable
            name="friendsModel"
            type="com.bijgepast.locationhunter.viewmodels.FriendsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/BackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UserName"
            app:layout_constraintBottom_toBottomOf="@id/BackButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@id/BackButton"
            app:layout_constraintTop_toTopOf="@id/BackButton" />

        <TextView
            android:id="@+id/Friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/Friends"
            app:layout_constraintBottom_toTopOf="@id/Search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Name"
            app:layout_constraintVertical_bias="0.1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/FriendsList"
            friendList="@{friendsModel.friends}"
            resourceID="@{R.layout.friend_list_item}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_marginBottom="40dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/Requests"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Friends"
            app:layout_constraintVertical_bias="0"
            tools:listitem="@layout/friend_list_item" />

        <Button
            android:id="@+id/Requests"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/Requests"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/Search"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/Search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/Search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/Requests" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>