<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="activity"
            type="com.bijgepast.locationhunter.UserActivity" />

        <variable
            name="userModel"
            type="com.bijgepast.locationhunter.models.UserModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tomtom="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserActivity">

        <Button
            android:id="@+id/BackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:onClick="@{() -> activity.onBackPressed()}"
            android:text="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{userModel.userName}"
            app:layout_constraintBottom_toBottomOf="@id/BackButton"
            app:layout_constraintEnd_toStartOf="@id/LogOut"
            app:layout_constraintStart_toEndOf="@id/BackButton"
            app:layout_constraintTop_toTopOf="@id/BackButton" />

        <Button
            android:id="@+id/LogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:onClick="@{() -> activity.logOff()}"
            android:text="@string/LogOut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/LocationsVisited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/Locations_Visited"
            app:layout_constraintBottom_toTopOf="@id/Score"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Name"
            app:layout_constraintVertical_bias="0.2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toTopOf="@id/Friends"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LocationsVisited">

            <com.tomtom.online.sdk.map.MapView
                android:id="@+id/tomtom_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                tomtom:mapsApiKey="AP1jNZ5uzFm201rNfeXVWSjXk1eIL394"
                tomtom:trafficApiKey="AP1jNZ5uzFm201rNfeXVWSjXk1eIL394" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@{String.valueOf(userModel.score)}"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/Friends"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <Button
            android:id="@+id/Friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:onClick="@{() -> activity.navigateFriends()}"
            android:text="@string/Friends"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>